:lipstick: Update style

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Research Software Reactor
 description: Research Software Reactor - Events and blogs for researchers wanting to get more out of Azure.
-featured_image: /images/raining_binary.jpg
+featured_image: /images/side.svg
 ---
 
 <section class="blog single">
@@ -19,7 +19,8 @@ featured_image: /images/raining_binary.jpg
 			</div>
 
 			{% if post.featured_image %}
-			<a href="{{ post.url | relative_url }}" class="blog-post__image" style="background-image: url({{ post.featured_image | relative_url }});"></a>
+			<a href="{{ post.url | relative_url }}" class="blog-post__image"
+				style="background-image: url({{ post.featured_image | relative_url }});"></a>
 			{% endif %}
 
 			<div class="blog-post__content">
@@ -41,12 +42,14 @@ featured_image: /images/raining_binary.jpg
 
 	{% if paginator.previous_page %}
 	<div class="pagination__prev">
-		<a href="{{ paginator.previous_page_path | relative_url }}" class="button button--large"><i class="fa fa-angle-left" aria-hidden="true"></i> <span>Newer Posts</span></a>
+		<a href="{{ paginator.previous_page_path | relative_url }}" class="button button--large"><i
+				class="fa fa-angle-left" aria-hidden="true"></i> <span>Newer Posts</span></a>
 	</div>
 	{% endif %}
 	{% if paginator.next_page %}
 	<div class="pagination__next">
-		<a href="{{ paginator.next_page_path | relative_url }}" class="button button--large"><span>Older Posts</span> <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+		<a href="{{ paginator.next_page_path | relative_url }}" class="button button--large"><span>Older Posts</span> <i
+				class="fa fa-angle-right" aria-hidden="true"></i></a>
 	</div>
 	{% endif %}
 
